--- a/w2/main.html
+++ b/w2/main.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>To-Do List</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <div id="myDIV" class="header">
-  <h2>My To Do List</h2>
-  <input type="text" id="myInput" placeholder="Title...">
-  <span onclick="newElement()" class="addBtn">Add</span>
-</div>
-
-<ul id="myUL">
-
-</ul>
-    <script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="https://www.clipartmax.com/png/full/17-173002_big-image-checkmark-vector.png">
+    </head>
+    <body>
+        <p class="headertext">To-Do List</p>
+        <p class="htwotext">To-Do List</p>
+        <div class="flex-container">
+                <input type="text" placeholder="New Task" class="inputnewtask">
+                <button class="addbutton" onclick="add()">Add</button>
+        </div>
+        <div class="tables">
+        </div>  
+        <script src="script.js">
+        </script>
+    </body>
 </html>
